# oss-repo

labs/lab-02/: report.md
labs/lab-03/: .gource.mp4.icloud  Lab3.md  lab3.txt
labs/lab-04/: lab4.md
labs/lab-05/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dynamic_block  lab05.md  lab5.txt  libdynlib.dylib  static_block
labs/lab-05/headers/: block.h
labs/lab-05/source/: block.c
labs/lab-06/: lab_report.md
labs/lab-07/: Lab7.md  output3.txt  step1.py  step2.py  step3.py  submission.txt
labs/lab-08/: Report.md
